# RFwatch

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  LLM-README.md  README.md  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: __init__.py  run.py
core/: __init__.py  config.py  detector.py  emitter_publisher.py  emitter_store.py  emitter_tracker.py  engine_controller.py  event.py  event_builder.py  event_publisher.py  event_store.py  feature_extractor.py  iq_stream.py  psd_publisher.py  safe_flowgraph.py  segmenter.py  tx_thread.py
grblocks/: __init__.py  flowgraph.py  iq_source_block.py
tests/: __init__.py  test_detector.py  test_emitter_tracker.py  test_event_builder.py  test_event_detail.py  test_feature_extractor.py  test_iq_stream.py  test_segmenter.py
ui/: __init__.py  app.py  event_detail.py  main_window.py  scan_results.py  settings_store.py  signal_list.py  spectrum_view.py  theme.py
utils/: __init__.py  dsp.py  logging.py  stats.py  time_utils.py
