[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rfwatch"
version = "1.0.0"
description = "RF signal detection and analysis system for HackRF One"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pranav Dhiran", email = "dhiranpranav72@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["sdr", "hackrf", "rf", "gnuradio", "spectrum-analyzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "numpy",
    "PySide6",
    "PyQt5",
    "pyqtgraph",
]

[project.urls]
Homepage = "https://github.com/thecipher24/RFwatch"
Repository = "https://github.com/thecipher24/RFwatch.git"
Issues = "https://github.com/thecipher24/RFwatch/issues"

[project.scripts]
rfwatch = "cli.run:main"

[tool.setuptools.packages]
find = {}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

